# textsnap

./: .gitignore  LICENSE  MANIFEST.in  README.md  model_checksums.sha256  pyproject.toml  requirements-lock.txt  textsnap.py
