[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textsnap"
version = "0.1.0"
description = "Snap any image, screenshot, or webpage into plaintext. No GPU. No cloud. One command."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kouhxp" }]
keywords = ["ocr", "paddleocr", "onnx", "cpu", "vlm", "document-parsing", "screenshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
]
dependencies = [
    "numpy>=1.21",
    "pillow>=10.0",
    "onnxruntime>=1.17",
    "huggingface_hub>=0.20",
    "requests>=2.31",
    "tokenizers>=0.15",
    "psutil>=5.9",
    "beautifulsoup4>=4.11",
    "readability-lxml>=0.8.1",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/kouhxp/textsnap"
Repository = "https://github.com/kouhxp/textsnap"

[project.scripts]
textsnap = "textsnap:main"
ocr = "textsnap:main"

[tool.setuptools]
py-modules = ["textsnap"]
